Theme: Fixed Expo trash-icon not fitting in button

--- a/data/theme/cinnamon.css
+++ b/data/theme/cinnamon.css
@@ -406,6 +406,7 @@ StScrollBar StButton#vhandle:hover {
 
 .window-close-area {
 	background-image: url("trash-icon.png");
+	background-size: 100px;
 	background-color: rgba(60, 60, 60, 0.8);
 	border: 4px solid rgba(128,128,128,0.8);
 	border-bottom-width: 0px;
